--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <input type="submit" id="start" value="start">
             </form>
         </section>
-        <section id="game">
+        <section id="game" hidden>
             <div id="win-description"></div>
             <div id="score">
                 <p id="player1" class="players"></p>
