Add computer plays with random cells

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div id="game-board">
     
             </div>
-            <button id="restart-button">Restart</button>
+            <button id="restart-button">Next Round</button>
         </section>
     </main>
     <script src="script.js"></script>
