--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <section id="home">
             <form id="home-form">
                 <div>
+                    <p class="symbol">X</p>
                     <input type="text" maxlength="13" name="player-name-1" id="player-name-1" placeholder="Player 1">
                     <label class="radio-inputs" for="human-1">
                         <input type="radio" name="player-type-1" id="human-1" value="human-1" checked>
@@ -24,6 +25,7 @@
                 </div>
                 
                 <div>
+                    <p class="symbol">O</p>
                     <input type="text" maxlength="13" name="player-name-2" id="player-name-2" placeholder="Player 2">
                     <label class="radio-inputs" for="human-2">
                         <input type="radio" name="player-type-2" id="human-2" value="human-2" checked>
@@ -52,7 +54,7 @@
             <div id="game-board">
     
             </div>
-            <button id="restart-button">Next Round</button>
+            <button id="restart-button">New Round</button>
         </section>
     </main>
     <script src="script.js"></script>
