--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             <div id="score">
                 <p id="player1" class="players"></p>
                 <div id="score-display">
-                    <p id="score1" class="scores"></p>
+                    <p id="score1" class="scores">0</p>
                     <p>-</p>
-                    <p id="score2" class="scores"></p>
+                    <p id="score2" class="scores">0</p>
                 </div>
                 <p id="player2" class="players"></p>
             </div>
