add a mask to avoid click when ai plays

--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
                 </div>
                 <p id="player2" class="players"></p>
             </div>
-            <div id="game-board">
-    
+            <div id="game-board-zone">
+                <div id="game-board-mask">
+                </div>
+                <div id="game-board">
+                </div>
             </div>
             <button id="restart-button">New Round</button>
         </section>
