highlight current player name

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <section id="game" hidden>
             <div id="win-description"></div>
             <div id="score">
-                <p id="player1" class="players"></p>
+                <p id="player1" class="players current-player-name"></p>
                 <div id="score-display">
                     <p id="score1" class="scores">0</p>
                     <p>-</p>
