--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.11.2/css/all.css"
+      integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>Tic Tac Toe</title>
   </head>
@@ -76,6 +82,7 @@
       </section>
       <section id="game" hidden>
         <div id="win-description"></div>
+        <button id="restart-button" disabled>New Round</button>
         <div id="score">
           <p id="player1" class="players current-player-name"></p>
           <div id="score-display">
@@ -89,7 +96,6 @@
           <div id="game-board-mask"></div>
           <div id="game-board"></div>
         </div>
-        <button id="restart-button" disabled>New Round</button>
       </section>
     </main>
     <script src="script.js"></script>
