Add round results history

--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
           </div>
         </div>
       </section>
+
+      <section id="round-results"></section>
     </main>
     <script src="script.js"></script>
   </body>
