--- a/index.html
+++ b/index.html
@@ -136,6 +136,17 @@
 
       <section id="round-results"></section>
     </main>
+    <footer id="footer">
+      <p>
+        <a href="https://github.com/aurelien-genois/tic-tac-toe" target="_blank"
+          >Sixth Odin project</a
+        >
+        created by
+        <a href="https://github.com/aurelien-genois" target="_blank"
+          >Aurélien Genois</a
+        >
+      </p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
